
  gem rdoc --all --overwrite

If you don't want to rebuild the rdoc for `gem server`, add --no-rdoc.

* N Minor Enhancements
  * Methods will now be cross-referenced when preceeded with ::.  Ruby Bug
    #3169 by Marc-Andre Lafortune.
  * Methods now have human readable fragment identifiers for HTML output.
    (#method-i-gsub vs #M000005).  Ruby Bug #3023 by Marc-Andre Lafortune.

=== 2.5.3 / 2010-04-10

* 1 Minor Enhancement
  * RDoc::Parser::Simple and the include directive remove coding: comment from
    first line
* 2 Bug Fixes
  * Fixed loading of created.rid when regenerating documentation.  Ruby bug
    #3121 by Yusuke Endoh.
  * Compare times as Integers as created.rid doesn't store fractional times.

=== 2.5.2 / 2010-04-09

* 1 Minor Enhancement
  * Imported various changes by Nobu from ruby trunk.
* 2 Bug Fixes
  * RDoc parses files without extensions as text files again.
  * RDoc::Parser::Ruby parses %{ strings correctly again.

=== 2.5.1 / 2010-04-06

* 1 Minor Enhancement
  * RDoc::Parser::C now supports the include directive for classes and
    modules.
* 6 Bug Fixes
  * RDoc::AnyMethod params now get saved in ri data.
  * ri now displays method arguments correctly.
  * RDoc::Markup::Parser allows no space between = and header text like rdoc
    2.4 and earlier.
  * RDoc::Parser::C's "in" directive now looks in the current directory.
  * RDoc::Task's rerdoc task no longer deletes the doc directory twice.
  * rdoc --force-update now works correctly.  Patch by Nobu Nokada

=== 2.5 / 2010-03-31

* 9 Major Enhancements
  * Darkfish now has a "Home" button
  * ri no longer displays the value of a constant.  There's no easy way to
    make them presentable.  Use irb or ruby -e instead.  Ruby Bug #549.
  * New ri data format now uses Marshal and pre-builds caches
    * No support for old ri data format, too hard to maintain
    * To upgrade your core ri documentation, install the rdoc-data gem and run
      rdoc-data